--- a/docs/01原神启动.md
+++ b/docs/01原神启动.md
@@ -74,20 +74,34 @@
 
 ```json
 {
-  // 在保存时格式化文件
-  "editor.formatOnSave": true,
-  // 文件格式化配置
-  "[vue]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  // 配置语言的文件关联
-  "files.associations": {
-    "pages.json": "jsonc", // pages.json 可以写注释
-    "manifest.json": "jsonc" // manifest.json 可以写注释
-  }
+    // 在保存时格式化文件
+    "editor.formatOnSave": true,
+    // 文件格式化配置
+    "[vue]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    // 配置语言的文件关联
+    "files.associations": {
+        "pages.json": "jsonc", // pages.json 可以写注释
+        "manifest.json": "jsonc" // manifest.json 可以写注释
+    },
+    "editor.formatOnSave": true,
+    "prettier.configPath": ".prettierrc.js",
+    "prettier.ignorePath": ".prettierignore",
+    "prettier.prettierPath": "",
+    "prettier.requireConfig": false,
+    // vetur版本低，与eslint不适配
+    "vetur.validation.template": false,
+    // 设置文件默认使用prettier格式化
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    // 配置在保存时，执行stylelint
+    "editor.codeActionsOnSave": {
+        "source.fixAll.stylelint": "explicit"
+    },
+    "cSpell.words": []
 }
 ```
 
